Sat May 16 18:14:19 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker.rb, lib/rss/maker/0.9.rb,
	test/test_maker_*.rb: add RSS::Maker.supported?

Sat May 16 18:12:39 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/content/*, lib/rss/dublincore/*: fix circular require.
	* test/test_maker_atom_feed.rb,
	test/test_maker_atom_entry.rb: suppress warnings.

Sat May 16 18:07:17 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/feed.rb, test/test_maker_atom_feed.rb:
	remove needless codes.

Sat May 16 18:05:07 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/entry.rb: fix a typo.

Sat May 16 18:02:57 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/feed.rb, test/test_maker_atom_entry.rb,
	test/test_maker_atom_feed.rb: fix duplicated dc:date.
	Reported by Kazuhiro NISHIYAMA. Thanks!!! [ruby-list:46014]

Sat May 16 18:02:16 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, lib/rss/maker/1.0.rb, lib/rss/maker/feed.rb,
	test/rss/test_maker_1.0.rb, test/rss/test_maker_atom_feed.rb:
	RSS 1.0 and Atom feed maker treat maker.channel.language as
	maker.channel.dc_language.

Sat May 16 17:57:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/lib/dl/callback.rb (DL#remove_callback_internal): ignore
	  unbound function.  [ruby-dev:38474]

Sat May 16 17:51:11 2009  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/rss_recent.rb, sample/rss/list_description.rb: use
	UTF-8.

Sat May 16 17:47:55 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb (RSS::VERSION):
	0.2.5 -> 0.2.6.

Sat May 16 17:26:04 2009  Narihiro Nakamura  <authorNari@gmail.com>

	* iseq.c (rb_iseq_clone): use longlife object and insert write barrier.

	* vm_insnhelper.c (vm_cref_push): ditto.

	* vm_insnhelper.h (COPY_CREF): insert write barrier.

Sat May 16 13:49:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_autoload_load): gets rid of false warning.
	  [ruby-core:23466]
