@@ -507,6 +507,22 @@ EOR
         #{make_image}
       EOR
     end
+
+    def test_unknown_case_insensitive_duplicated_element
+      xmlns = {
+        "foaf" => "http://xmlns.com/foaf/0.1/",
+        "dc" => "http://purl.org/dc/elements/1.1/",
+      }
+      assert_parse(make_RDF(<<-EOR, xmlns), :nothing_raised)
+        #{make_channel}
+        #{make_item}
+        #{make_image}
+        <foaf:Image rdf:about="http://example.com/myself.png">
+          <dc:title>Myself</dc:title>
+          <dc:link>http://example.com/</dc:link>
+        </foaf:Image>
+      EOR
+    end
   end
 end
 
